--- a/recommendation-system.ipynb
+++ b/recommendation-system.ipynb
@@ -147,6 +147,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 211,
+   "id": "2c4c9bdb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ = DataSet(df[\"user_id\"].values, df[\"item_id\"].values, df[\"rating\"].values)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e1120a0c",
    "metadata": {},
@@ -156,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 212,
    "id": "114bdd4e",
    "metadata": {},
    "outputs": [],
@@ -177,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 213,
    "id": "1e8893b7",
    "metadata": {},
    "outputs": [],
@@ -201,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 214,
    "id": "3efc3970",
    "metadata": {},
    "outputs": [
@@ -209,11 +219,11 @@
      "data": {
       "text/plain": [
        "item_id           0\n",
-       "user_id           1\n",
+       "user_id           0\n",
        "rating            0\n",
        "timestamp         0\n",
        "size          21760\n",
-       "fit           18506\n",
+       "fit           18505\n",
        "user_attr      8367\n",
        "model_attr        0\n",
        "category          0\n",
@@ -223,7 +233,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 215,
    "id": "ba1b58c5",
    "metadata": {},
    "outputs": [],
@@ -246,8 +256,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "ddb7eb9f",
+   "execution_count": 216,
+   "id": "e5b4a2f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,19 +266,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "444813aa",
+   "execution_count": 217,
+   "id": "0388b192",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Encoding needed for the embedding layers\n",
     "train_data = encode_data(training_data)\n",
     "val_data = encode_data(training_data, validation_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "9dd893c2",
+   "execution_count": 218,
+   "id": "c0473f53",
    "metadata": {},
    "outputs": [
     {
@@ -337,51 +348,34 @@
        "      <td>2012</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>90708</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2018-06-16 19:13:07.131000+00:00</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Small</td>\n",
-       "      <td>Small</td>\n",
-       "      <td>Bottoms</td>\n",
-       "      <td>ModCloth</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       item_id  user_id  rating                         timestamp  size  \\\n",
-       "72588        0        0       3         2017-02-10 08:00:00+00:00   NaN   \n",
-       "10355        1        1       5         2013-11-17 08:00:00+00:00   5.0   \n",
-       "90708        2        2       3  2018-06-16 19:13:07.131000+00:00   1.0   \n",
+       "       item_id  user_id  rating                  timestamp  size  \\\n",
+       "72588        0        0       3  2017-02-10 08:00:00+00:00   NaN   \n",
+       "10355        1        1       5  2013-11-17 08:00:00+00:00   5.0   \n",
        "\n",
-       "                  fit user_attr   model_attr category     brand  year  split  \n",
-       "72588  Slightly small       NaN        Small  Bottoms       NaN  2018      0  \n",
-       "10355      Just right     Large  Small&Large  Dresses       NaN  2012      2  \n",
-       "90708             NaN     Small        Small  Bottoms  ModCloth  2018      0  "
+       "                  fit user_attr   model_attr category brand  year  split  \n",
+       "72588  Slightly small       NaN        Small  Bottoms   NaN  2018      0  \n",
+       "10355      Just right     Large  Small&Large  Dresses   NaN  2012      2  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# After encode_data the values will be continous\n",
-    "training_data[0:3]"
+    "train_data.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "1181fd12",
+   "execution_count": 228,
+   "id": "370bd7e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,13 +390,15 @@
     "    def forward(self, u, v):\n",
     "        u = self.user_emb(u)\n",
     "        v = self.item_emb(v)\n",
-    "        return (u*v).sum(1)"
+    "        return (u*v).sum(1)\n",
+    "    \n",
+    "# Reference https://github.com/yanneta/pytorch-tutorials/blob/master/collaborative-filtering-nn.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "22e54804",
+   "execution_count": 229,
+   "id": "00ec678d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,8 +408,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "3697b6ac",
+   "execution_count": 230,
+   "id": "2ffc32fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,8 +418,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "de690493",
+   "execution_count": 231,
+   "id": "eb563919",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,13 +428,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "16fbb267",
+   "execution_count": 232,
+   "id": "d64ad940",
    "metadata": {},
    "outputs": [],
    "source": [
     "def test_loss(model):\n",
     "    model.eval()\n",
+    "    \n",
     "    users = torch.LongTensor(val_data.user_id.values)\n",
     "    items = torch.LongTensor(val_data.item_id.values)\n",
     "    ratings = torch.FloatTensor(val_data.rating.values)\n",
@@ -460,15 +457,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "cf7511d1",
+   "execution_count": 235,
+   "id": "fa1bb637",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_epocs(model, epochs=10, lr=0.01, wd=0.0):\n",
-    "    opt = torch.optim.Adam(model.parameters(), lr=lr, weight_decay=wd)\n",
+    "def train_epocs(model, epochs=10, lr=0.01):\n",
+    "    opt = torch.optim.Adam(model.parameters(), lr=lr)\n",
     "    model.train()\n",
     "    for i in range(epochs):\n",
+    "        \n",
     "        users = torch.LongTensor(train_data.user_id.values)\n",
     "        items = torch.LongTensor(train_data.item_id.values)\n",
     "        ratings = torch.FloatTensor(train_data.rating.values)\n",
@@ -480,13 +478,15 @@
     "        loss.backward()\n",
     "        opt.step()\n",
     "        print(loss.item())\n",
-    "    test_loss(model)"
+    "    test_loss(model)\n",
+    "    \n",
+    "# Reference https://github.com/yanneta/pytorch-tutorials/blob/master/collaborative-filtering-nn.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "39bd0310",
+   "execution_count": 236,
+   "id": "46495006",
    "metadata": {
     "scrolled": true
    },
@@ -495,23 +495,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.11853957921266556\n",
-      "0.18359729647636414\n",
-      "0.10744021832942963\n",
-      "0.11564409732818604\n",
-      "0.12175992876291275\n",
-      "0.09951594471931458\n",
-      "0.08221704512834549\n",
-      "0.08084078133106232\n",
-      "0.08263689279556274\n",
-      "0.07636804133653641\n",
-      "0.06550928205251694\n",
-      "0.058348122984170914\n",
-      "0.05670320987701416\n",
-      "0.05591462925076485\n",
-      "0.052154190838336945\n",
-      "Accuracy:  71.62259748916787 %\n",
-      "test loss 2.233 \n"
+      "1.5833321809768677\n",
+      "0.8276181817054749\n",
+      "0.6245642900466919\n",
+      "0.681628942489624\n",
+      "0.7612854242324829\n",
+      "0.771487832069397\n",
+      "0.718458890914917\n",
+      "0.6449016332626343\n",
+      "0.5920764207839966\n",
+      "0.5785647630691528\n",
+      "0.5942713618278503\n",
+      "0.6130982637405396\n",
+      "0.6134486198425293\n",
+      "0.5901219844818115\n",
+      "0.5530322194099426\n",
+      "Accuracy:  70.34496167092546 %\n",
+      "test loss 2.350 \n"
      ]
     }
    ],
@@ -520,17 +520,134 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73b69f58",
+   "cell_type": "markdown",
+   "id": "4431e5e3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Content Based"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "id": "dba6f509",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>size</th>\n",
+       "      <th>fit</th>\n",
+       "      <th>user_attr</th>\n",
+       "      <th>model_attr</th>\n",
+       "      <th>category</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>year</th>\n",
+       "      <th>split</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7443</td>\n",
+       "      <td>Alex</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2010-01-21 08:00:00+00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Small</td>\n",
+       "      <td>Small</td>\n",
+       "      <td>Dresses</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7443</td>\n",
+       "      <td>carolyn.agan</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2010-01-27 08:00:00+00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Small</td>\n",
+       "      <td>Dresses</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   item_id       user_id  rating                  timestamp  size  fit  \\\n",
+       "0     7443          Alex       4  2010-01-21 08:00:00+00:00   NaN  NaN   \n",
+       "1     7443  carolyn.agan       3  2010-01-27 08:00:00+00:00   NaN  NaN   \n",
+       "\n",
+       "  user_attr model_attr category brand  year  split  \n",
+       "0     Small      Small  Dresses   NaN  2012      0  \n",
+       "1       NaN      Small  Dresses   NaN  2012      0  "
+      ]
+     },
+     "execution_count": 237,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Finding out what variables that potentially could be into a specific content\n",
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "id": "c3f0c3be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "31"
+      ]
+     },
+     "execution_count": 238,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['brand'].nunique()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f0aa5ac",
+   "id": "b228de99",
    "metadata": {},
    "outputs": [],
    "source": []
