Added comparison to the matrix factorization by predicting the average rating for item

--- a/recommendation-system.ipynb
+++ b/recommendation-system.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 90,
    "id": "27f12a79",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 91,
    "id": "1f35215a",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 92,
    "id": "c03365e8",
    "metadata": {},
    "outputs": [
@@ -137,23 +137,13 @@
        "2     Small      Small  Dresses   NaN  2012      0  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 211,
-   "id": "2c4c9bdb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_ = DataSet(df[\"user_id\"].values, df[\"item_id\"].values, df[\"rating\"].values)"
    ]
   },
   {
@@ -166,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 93,
    "id": "114bdd4e",
    "metadata": {},
    "outputs": [],
@@ -187,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 94,
    "id": "1e8893b7",
    "metadata": {},
    "outputs": [],
@@ -211,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 95,
    "id": "3efc3970",
    "metadata": {},
    "outputs": [
@@ -219,11 +209,11 @@
      "data": {
       "text/plain": [
        "item_id           0\n",
-       "user_id           0\n",
+       "user_id           1\n",
        "rating            0\n",
        "timestamp         0\n",
        "size          21760\n",
-       "fit           18505\n",
+       "fit           18506\n",
        "user_attr      8367\n",
        "model_attr        0\n",
        "category          0\n",
@@ -233,7 +223,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 96,
    "id": "ba1b58c5",
    "metadata": {},
    "outputs": [],
@@ -256,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 97,
    "id": "e5b4a2f1",
    "metadata": {},
    "outputs": [],
@@ -266,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 98,
    "id": "0388b192",
    "metadata": {},
    "outputs": [],
@@ -278,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 99,
    "id": "c0473f53",
    "metadata": {},
    "outputs": [
@@ -362,7 +352,7 @@
        "10355      Just right     Large  Small&Large  Dresses   NaN  2012      2  "
       ]
      },
-     "execution_count": 218,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 100,
    "id": "370bd7e1",
    "metadata": {},
    "outputs": [],
@@ -397,18 +387,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 101,
    "id": "00ec678d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_unique_users = len(set(df_train.user_id.values))\n",
-    "num_unique_movies = len(set(df_train.item_id.values))"
+    "num_unique_users = len(set(training_data.user_id.values))\n",
+    "num_unique_movies = len(set(training_data.item_id.values))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 102,
    "id": "2ffc32fc",
    "metadata": {},
    "outputs": [],
@@ -418,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 103,
    "id": "eb563919",
    "metadata": {},
    "outputs": [],
@@ -428,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 104,
    "id": "d64ad940",
    "metadata": {},
    "outputs": [],
@@ -441,7 +431,6 @@
     "    ratings = torch.FloatTensor(val_data.rating.values)\n",
     "\n",
     "    y_hat = model(users, items)\n",
-    "    \n",
     "    \n",
     "    count = 0\n",
     "    for i in range(len(y_hat)):\n",
@@ -457,7 +446,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 117,
+   "id": "46f70506",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_loss2(model):\n",
+    "    model.eval()\n",
+    "    \n",
+    "    users = torch.LongTensor(val_data.user_id.values)\n",
+    "    items = torch.LongTensor(val_data.item_id.values)\n",
+    "    ratings = torch.FloatTensor(val_data.rating.values)\n",
+    "\n",
+    "    y_hat = model(users, items)\n",
+    "    \n",
+    "    count = 0\n",
+    "    for i in range(len(y_hat)):\n",
+    "        \n",
+    "        diff = np.abs(y_hat[i].detach().numpy() - ratings[i].detach().numpy())\n",
+    "        if round(diff) == 0:\n",
+    "            count += 1\n",
+    "    print(\"Accuracy: \", 100*count / len(y_hat), \"%\")\n",
+    "\n",
+    "    loss = F.mse_loss(y_hat, ratings)\n",
+    "    print(\"test loss %.3f \" % loss.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
    "id": "fa1bb637",
    "metadata": {},
    "outputs": [],
@@ -479,13 +496,14 @@
     "        opt.step()\n",
     "        print(loss.item())\n",
     "    test_loss(model)\n",
+    "    test_loss2(model)\n",
     "    \n",
     "# Reference https://github.com/yanneta/pytorch-tutorials/blob/master/collaborative-filtering-nn.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 119,
    "id": "46495006",
    "metadata": {
     "scrolled": true
@@ -495,23 +513,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.5833321809768677\n",
-      "0.8276181817054749\n",
-      "0.6245642900466919\n",
-      "0.681628942489624\n",
-      "0.7612854242324829\n",
-      "0.771487832069397\n",
-      "0.718458890914917\n",
-      "0.6449016332626343\n",
-      "0.5920764207839966\n",
-      "0.5785647630691528\n",
-      "0.5942713618278503\n",
-      "0.6130982637405396\n",
-      "0.6134486198425293\n",
-      "0.5901219844818115\n",
-      "0.5530322194099426\n",
-      "Accuracy:  70.34496167092546 %\n",
-      "test loss 2.350 \n"
+      "1.5772385597229004\n",
+      "0.8253581523895264\n",
+      "0.6249890327453613\n",
+      "0.6825196743011475\n",
+      "0.7610273361206055\n",
+      "0.7698451280593872\n",
+      "0.7162232995033264\n",
+      "0.6431704163551331\n",
+      "0.5915945172309875\n",
+      "0.5791864395141602\n",
+      "0.5950385928153992\n",
+      "0.6130857467651367\n",
+      "0.6124236583709717\n",
+      "0.5885354280471802\n",
+      "0.5516346096992493\n",
+      "Accuracy:  70.38384623930675 %\n",
+      "test loss 2.344 \n",
+      "Accuracy:  29.60782135318298 %\n",
+      "test loss 2.344 \n"
      ]
     }
    ],
@@ -521,15 +541,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4431e5e3",
+   "id": "8423eb2c",
    "metadata": {},
    "source": [
-    "# Content Based"
+    "# Making a recommendation from only average popularity to compare results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 120,
+   "id": "bc2d29ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_data, validation_data = model_selection.train_test_split(df, test_size=0.2, random_state=12, stratify=df.rating.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
    "id": "dba6f509",
    "metadata": {},
    "outputs": [
@@ -613,7 +643,7 @@
        "1       NaN      Small  Dresses   NaN  2012      0  "
       ]
      },
-     "execution_count": 237,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,29 +655,298 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 110,
    "id": "c3f0c3be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item_set = set(training_data.item_id.values)\n",
+    "#item_set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "b228de99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unique_items = []\n",
+    "for item in item_set:\n",
+    "    unique_items.append(int(item))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "ad25467e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items = {}\n",
+    "for i, row in training_data.iterrows():\n",
+    "    item_name = row['item_id']\n",
+    "    item_rating = row['rating']\n",
+    "    \n",
+    "    try:\n",
+    "        items[str(item_name)] =  [items[str(item_name)][0] + item_rating, items[str(item_name)][1] + 1]\n",
+    "    \n",
+    "    # This handles if item not already existing\n",
+    "    except Exception as e:\n",
+    "        items[str(item_name)] = [item_rating, 1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "bcf739e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "items_avg = {}\n",
+    "\n",
+    "for item in items:\n",
+    "    item_id = item\n",
+    "    values = items.get(item_id)\n",
+    "    \n",
+    "    # items_avg['item_id'] = total rating for item / number of buyers of item\n",
+    "    items_avg[item_id] = values[0] / values[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "1d9d7c58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#items_avg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "23b3ba01",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "31"
-      ]
-     },
-     "execution_count": 238,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unable to find item_id\n",
+      "'151534' \n",
+      "\n",
+      "Unable to find item_id\n",
+      "'151458' \n",
+      "\n",
+      "Unable to find item_id\n",
+      "'152562' \n",
+      "\n",
+      "Unable to find item_id\n",
+      "'151534' \n",
+      "\n",
+      "Unable to find item_id\n",
+      "'142082' \n",
+      "\n",
+      "Unable to find item_id\n",
+      "'152562' \n",
+      "\n",
+      "Unable to find item_id\n",
+      "'153339' \n",
+      "\n",
+      "Unable to find item_id\n",
+      "'152562' \n",
+      "\n",
+      "Unable to find item_id\n",
+      "'151865' \n",
+      "\n",
+      "Unable to find item_id\n",
+      "'151865' \n",
+      "\n",
+      "Unable to find item_id\n",
+      "'142082' \n",
+      "\n",
+      "Accuracy:  89.17363231392963 %\n"
+     ]
     }
    ],
    "source": [
-    "df['brand'].nunique()"
+    "correct_predictions = 0\n",
+    "\n",
+    "for i, row in validation_data.iterrows():\n",
+    "    \n",
+    "    item_id = row['item_id']\n",
+    "    correct_rating = row['rating']\n",
+    "    try: \n",
+    "        prediction = avg_rating =  items_avg[str(item_id)]\n",
+    "        \n",
+    "        \n",
+    "        diff = np.abs(prediction - correct_rating)\n",
+    "        if round(diff) == 0 or round(diff) == 1:\n",
+    "            correct_predictions += 1\n",
+    "            \n",
+    "    except Exception as e:\n",
+    "        print(\"Unable to find item_id\")\n",
+    "        print(e, \"\\n\")\n",
+    "        \n",
+    "\n",
+    "print(\"Accuracy: \", 100*correct_predictions / len(validation_data), \"%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "7d4aa723",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unable to find item_id\n",
+      "'151534' \n",
+      "\n",
+      "Unable to find item_id\n",
+      "'151458' \n",
+      "\n",
+      "Unable to find item_id\n",
+      "'152562' \n",
+      "\n",
+      "Unable to find item_id\n",
+      "'151534' \n",
+      "\n",
+      "Unable to find item_id\n",
+      "'142082' \n",
+      "\n",
+      "Unable to find item_id\n",
+      "'152562' \n",
+      "\n",
+      "Unable to find item_id\n",
+      "'153339' \n",
+      "\n",
+      "Unable to find item_id\n",
+      "'152562' \n",
+      "\n",
+      "Unable to find item_id\n",
+      "'151865' \n",
+      "\n",
+      "Unable to find item_id\n",
+      "'151865' \n",
+      "\n",
+      "Unable to find item_id\n",
+      "'142082' \n",
+      "\n",
+      "Accuracy:  33.04469693177837 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "correct_predictions = 0\n",
+    "\n",
+    "for i, row in validation_data.iterrows():\n",
+    "    \n",
+    "    item_id = row['item_id']\n",
+    "    correct_rating = row['rating']\n",
+    "    try: \n",
+    "        prediction = avg_rating =  items_avg[str(item_id)]\n",
+    "        \n",
+    "        \n",
+    "        diff = np.abs(prediction - correct_rating)\n",
+    "        if round(diff) == 0:\n",
+    "            correct_predictions += 1\n",
+    "            \n",
+    "    except Exception as e:\n",
+    "        print(\"Unable to find item_id\")\n",
+    "        print(e, \"\\n\")\n",
+    "\n",
+    "\n",
+    "print(\"Accuracy: \", 100*correct_predictions / len(validation_data), \"%\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b228de99",
+   "id": "59792bff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d438f442",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "247ac587",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39670a34",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2dd4b8fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b919ced9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "815626e6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b97b8f27",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4431e5e3",
+   "metadata": {},
+   "source": [
+    "# Content Based"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "033f3c15",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b34b144",
    "metadata": {},
    "outputs": [],
    "source": []
